# raster

./: .bunder.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  deps.sh  gen.sh
empty-http/: CMakeLists.txt
empty-http/gen-cpp/: Empty_types.h
empty-thrift/: Bench.cpp  CMakeLists.txt  Server.cpp  server.json
empty-thrift/gen-cpp/: Empty_constants.cpp  Empty_constants.h  Empty_server.skeleton.cpp  Empty_types.cpp
examples/empty/: Bench.cpp  CMakeLists.txt  Empty.thrift  Server.cpp  server.json
examples/empty/gen-cpp/: Empty.cpp  Empty_types.h
examples/flatbuffers/: Bench.cpp  CMakeLists.txt  Encoding.h  Helper.h  Server.cpp  server.json  table.fbs  table_generated.h
examples/parallel/: Bench.cpp  CMakeLists.txt  Parallel.thrift  Server.cpp  server.json
examples/parallel/gen-cpp/: Empty.h  Empty_types.cpp  Parallel.cpp  Parallel.h  Parallel_constants.cpp  Parallel_constants.h  Parallel_server.skeleton.cpp  Parallel_types.cpp  Parallel_types.h
examples/pbrpc/: Bench.cpp  CMakeLists.txt  Empty.pb.cc  Empty.pb.h  Empty.proto  Proxy.pb.cc  Proxy.pb.h  Proxy.proto  Server.cpp  server.json
examples/proxy/: Bench.cpp  CMakeLists.txt  Proxy.thrift  Server.cpp  server.json
examples/proxy/gen-cpp/: Proxy.cpp  Proxy.h  Proxy_constants.cpp  Proxy_constants.h  Proxy_server.skeleton.cpp  Proxy_types.cpp  Proxy_types.h
raster/3rd/double-conversion/: CMakeLists.txt
raster/3rd/http_parser/: CMakeLists.txt  http_parser.h  http_parser_cpp.cpp
raster/3rd/thrift/: CMakeLists.txt  TApplicationException.cpp  TApplicationException.h  TDispatchProcessor.h  TProcessor.h  cxxfunctional.h
raster/concurrency/: Baton.h  BlockingQueue.h  CMakeLists.txt  CPUThreadPool.cpp  CPUThreadPool.h  CPUThreadPoolExecutor.cpp  CPUThreadPoolExecutor.h  Executor.h  Futex.cpp  Futex.h  IOThreadPool.cpp  IOThreadPool.h  IOThreadPoolExecutor.cpp  IOThreadPoolExecutor.h  MPMCQueue.h  Observable.h  Observer.h  ThreadFactory.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  ThreadedExecutor.cpp  ThreadedExecutor.h
raster/concurrency/test/: CMakeLists.txt  ThreadPoolExecutorTest.cpp  (+1 more)
raster/coroutine/: BoostContext.h  CMakeLists.txt  Context.h  Executor.h  Fiber.cpp  Fiber.h  FiberHub.cpp  FiberHub.h  FiberManager.cpp  FiberManager.h  FunctionTask.h  GenericExecutor.h
raster/enc/: CMakeLists.txt  CharProperty.cpp  CharProperty.h  CharPropertyBuilder.cpp  cp936map.h  psedoutf8.h  uconv.cpp  uconv.h  un2gbkmap.h
raster/event/: CMakeLists.txt  EPoll.cpp  Event.cpp  Event.h  EventBase.cpp  EventBase.h  EventHandler.cpp  EventHandler.h  EventHandlerBase.h  EventLoop.cpp  EventLoop.h  EventLoopManager.cpp  EventLoopManager.h  EventPoll.cpp  EventPoll.h  EventPool.h  EventTask.h  Function.h  KqueuePoll.cpp  KqueuePoll.h  Poll.cpp  Poll.h  SelectPoll.cpp  SelectPoll.h  TimedHeap.h  Timeout.cpp  Timeout.h
raster/framework/: AutoTask.h  Backtrace.h  CMakeLists.txt  Config.cpp  Config.h  ConfigUtil.cpp  Degrader.cpp  Degrader.h  FalconSender.cpp  FalconSender.h  HubAdaptor.cpp  HubAdaptor.h  MemoryProtect.h  Monitor.cpp  Monitor.h  PeriodicScheduler.cpp  PeriodicScheduler.h  ProcessUtil.cpp  ProcessUtil.h  Sampler.cpp  Sampler.h  Signal.cpp  Signal.h  json.h
raster/io/: CMakeLists.txt  Compression.cpp  Compression.h  Cursor-inl.h  Cursor.cpp  Cursor.h  Descriptor.cpp  Descriptor.h  FSUtil.cpp  FSUtil.h  File.cpp  File.h  FileUtil.cpp  FileUtil.h  FlatDict.h  HugePageUtil.cpp  HugePages.cpp  HugePages.h  IOBuf.cpp  IOBuf.h  IOBufQueue.cpp  IOBufQueue.h  MMapFlatDict.h  MMapIOAlloc.cpp  MMapIOAlloc.h  Path.cpp  Path.h  RecordIO.cpp  RecordIO.h  TypedIOBuf.h  Waker.cpp  Waker.h  ZlibStreamCompressor.cpp  ZlibStreamCompressor.h  ZlibStreamDecompressor.cpp  ZlibStreamDecompressor.h
raster/net/: Acceptor.cpp  Acceptor.h  Actor.cpp  Actor.h  AsyncClient.cpp  AsyncClient.h  AsyncClientExecutor.h  CMakeLists.txt  Channel.h  ErrorEnum.cpp  ErrorEnum.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventLoop.cpp  EventPool.cpp  EventPool.h  EventTask.h  Exception.h  Group.cpp  Group.h  NetHub.cpp  NetHub.h  NetUtil.cpp  NetUtil.h  Peer.cpp  Peer.h  Processor.h  Protocol.cpp  Protocol.h  Service.h  Socket.cpp  Socket.h  Transport.cpp  Transport.h
raster/thread/: AtomicBitSet.h  AtomicLinkedList.h  AtomicPtr.h  AtomicUnorderedMap.h  Baton.h  BlockingQueue.h  CMakeLists.txt  CacheLocality.cpp  CacheLocality.h  ConcurrentSkipList-inl.h  ConcurrentSkipList.h  Futex.cpp  Futex.h  LockTraits.h  LockedMap.h  LockedQueue.h  MPMCQueue.h  ProducerConsumerQueue.h  RWSpinLock.h  Semaphore.h  SharedMutex.cpp  SharedMutex.h  SpinLock.h  Synchronized.h  ThreadUtil.cpp  ThreadUtil.h  UnionBasedStatic.h  Waiter.h
raster/util/: Algorithm.h  Arena.cpp  Arena.h  Asm.h  AssignOp.h  AtomicBitSet.h  AtomicPtr.h  AtomicUnorderedMap.h  Backtrace.h  Base64-inl.h  Base64.h  Baton.h  Benchmark.cpp  Benchmark.h  Bits.h  BlockingQueue.h  CMakeLists.txt  Checksum.cpp  Checksum.h  ContextWrapper.h  Conv.cpp  Conv.h  Counter.h  Debug.h  Demangle.cpp  Demangle.h  DynamicPtr.h  EscapeTables.cpp  EvictingCacheMap.h  Exception.h  FixedStream.h  Function.h  Futex.cpp  Futex.h  Hash.h  LockedDeq.h  LockedLinkedList.h  LockedMap.h  LockedQueue.h  LogBase.cpp  (+64 more)
rddoc/io/: CMakeLists.txt  Compression.cpp  Compression.h  Cursor.h  Descriptor.h  FSUtil.h  File.h  FileUtil.h  HugePageUtil.cpp  HugePages.cpp  HugePages.h  IOBuf.cpp  IOBuf.h  TypedIOBuf.h  Waker.h  ZlibStreamCompressor.cpp  ZlibStreamCompressor.h  ZlibStreamDecompressor.cpp  ZlibStreamDecompressor.h
rddoc/util/: Algorithm.h  Arena.cpp  Arena.h  AssignOp.h  AtomicBitSet.h  AutoTask.h  Base64-inl.h  Base64.h  Baton.h  Bits.h  BlockingQueue.h  CMakeLists.txt  Checksum.cpp  Checksum.h  ContextWrapper.h  Conv.cpp  Conv.h  Counter.h  DAG.h  Debug.h  Demangle.cpp  Demangle.h  EvictingCacheMap.h  Exception.h  FixedStream.h  Function.h  Futex.cpp  Futex.h  Hash.h  Lock.h  LockedDeq.h  LockedLinkedList.h  LockedMap.h  LockedSet.h  LogBase.h  Logging.h  Macro.h  MapUtil.h  MemTrace.cpp  MemTrace.h  (+52 more)
(+545 files in other folders)
