# Copyright (C) 2017, Yeolar

set(RASTER_UTIL_SRCS
    Arena.cpp
    Benchmark.cpp
    Checksum.cpp
    Conv.cpp
    Demangle.cpp
    dynamic.cpp
    EscapeTables.cpp
    json.cpp
    LogBase.cpp
    MemoryMapping.cpp
    ProcessUtil.cpp
    Random.cpp
    Range.cpp
    RendezvousHash.cpp
    SpookyHashV2.cpp
    String.cpp
    SysUtil.cpp
    TestUtil.cpp
    Time.cpp
    Unicode.cpp
    Uri.cpp
    Utf8StringPiece.cpp
    Uuid.cpp
)
add_library(raster_util OBJECT ${RASTER_UTIL_SRCS})

install(FILES
    Algorithm.h
    Arena.h
    Asm.h
    Backtrace.h
    Base64.h
    Base64-inl.h
    Benchmark.h
    Bits.h
    Checksum.h
    ContextWrapper.h
    Conv.h
    Debug.h
    Demangle.h
    dynamic.h
    dynamic-inl.h
    DynamicPtr.h
    EvictingCacheMap.h
    Exception.h
    FixedStream.h
    Function.h
    Hash.h
    json.h
    LogBase.h
    Logging.h
    Macro.h
    MapUtil.h
    Memory.h
    MemoryMapping.h
    MemoryProtect.h
    noncopyable.h
    Optional.h
    ProcessUtil.h
    Random.h
    Range.h
    ReflectObject.h
    RendezvousHash.h
    SArray.h
    ScopeGuard.h
    Singleton.h
    SpookyHashV2.h
    String.h
    String-inl.h
    SysUtil.h
    TestUtil.h
    TimedHeap.h
    Time.h
    Traits.h
    Unicode.h
    Uri.h
    Utf8StringPiece.h
    Utility.h
    Uuid.h
    DESTINATION include/raster/util)
